2008-05-30  Wenji Huang <wenji.huang@oracle.com>

        * systemtap.base/debugpath.exp: Add path for self-built kernel.

2008-05-28  Josh Stone  <joshua.i.stone@intel.com>

	PR 6529
	* systemtap.base/error_fn.*: New tests.

2008-05-28  Mark Wielaard  <mwielaard@redhat.com>

	* testsuite/Makefile.am (clean-local): Correct redirect of stderr.
	(installcheck): Don't depend on clean.

2008-05-28  Mark Wielaard  <mwielaard@redhat.com>

	* lib/systemtap.exp (setup_systemtap_environment): Create user
	based cache dir.
	* systemtap.base/cache.exp: Likewise.
	* Makefile.am (clean-local): Try to remove all .systemtap and
	.cache_test dirs.

2008-05-26  Frank Ch. Eigler  <fche@elastic.org>

	* testsuite/stmtvars.exp: Tweaked matching regexps, tested on
	f7, rhel5.

2008-05-24  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac (enable-dejazilla): Add option, default off.
	* Makefile.am (*check): Send systemtap.sum to dejazilla if enabled$a
	* execrc: New helper script for runtest rc overriding.
	* configure, Makefile.in: Regenerated.

2008-05-23  Frank Ch. Eigler  <fche@elastic.org>

	* buildok/{nfs,rpc}-all-probes.stp: Suppress warnings from empty probe
	bodies.
	* systemtap.pass1-4/buidok.exp: Mark above as kfail due to bug #4413.
	While there, also mark the process_test kfail for #1155, though even
	it fails only sporadically.

2008-05-21  Frank Ch. Eigler  <fche@elastic.org>

	PR 6538
	* buildok/ioscheduler.stp, nine.stp, scsi.stp, sixteen.stp,
	socket.stp, stat_insert.stp: Adapt to new warnings.
	* systemtap.maps/linear_empty.exp, systemtap.samples/args.exp,
	systemtap.samples/poll_map.stp, systemtap.string/strtol.stp: Ditto.

2008-05-20  Frank Ch. Eigler  <fche@elastic.org>

	PR 6538
	* systemtap.base/warnings.*: New tests.
	* buildok/eleven.stp, systemtap.examples/disktop.stp,
	transok/three.stp: Adapt to new warnings.

2008-05-21  Stan Cox  <scox@redhat.com>

	* systemtap.base/optim_arridx.stp: Test compound assignment and
	binary expression.